--- a/src/view/meus_livros.html
+++ b/src/view/meus_livros.html
@@ -10,6 +10,7 @@
 
       <link href="../css/bootstrap.min.css" rel="stylesheet" />
       <link href="../css/style.css" rel="stylesheet" />
+      
    </head>
 
    <body>
@@ -48,25 +49,11 @@
             </div>
 
             <div class="col-md-8 centralizar">
-               <div class="centralizar">
-                  <div class="card_meus_livros">
-                     <div>
-                        <img class="img_card" src="../img/crimecastigo.jpg" />
-                     </div>
-                     <div>
-                        <div class="card_titulo" id="titulo">1984</div>
-                        <p class="dados_livros">AUTOR:</p>
-                        <p class="dados_livros">CATEGORIA:</p>
-                        <p class="dados_livros">EDIÇÃO:</p>
-                        <p class="dados_livros">EDITORA:</p>
-                        <div class="row justify-content-center">
-                           <button class="botao_excluir">Excluir</button>
-                        </div>
-                     </div>
-                  </div>
-               </div>
+               <div id="listaLivros"></div>
             </div>
          </div>
       </div>
+      
+      <script src="../js/lista_livros.js"></script>
    </body>
 </html>
