--- a/src/view/login.html
+++ b/src/view/login.html
@@ -1,47 +1,64 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="pt-br">
    <head>
-      <meta charset="utf-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <meta name="description" content="" />
-      <meta name="author" content="" />
-      <meta name="generator" />
-      <title></title>
+      <meta charset="UTF-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-      <link href="../css/bootstrap.min.css" rel="stylesheet" />
-      <link href="../css/style.css" rel="stylesheet" />
+      <title>Login</title>
 
-      <body>
-         <div class="container">
-            <div class="card login text-center">
-               <br />
-               <p class="titulo">Login</p>
-               <form>
-                  <div>
-                     <input class="inputlogin" id="email" placeholder="email" />
-                  </div>
-                  <div>
-                     <input class="inputlogin" id="senha" placeholder="senha" />
-                  </div>
-               </form>
-               <br />
-               <div class="checkbox mb-3">
-                  <label>
-                     <input type="checkbox" />
-                     Lembrar
-                  </label>
-               </div>
-               <br />
-               <div>
-                  <button class="botao" type="entrar">Entrar</button>
-               </div>
-               <br />
-               <p>
-                  Novo por aqui?
-                  <a href="../view/cadastro.html">Cadastre-se</a>
-               </p>
-            </div>
-         </div>
-      </body>
+      <link rel="stylesheet" href="css/main.css" />
+      <link rel="preconnect" href="https://fonts.gstatic.com" />
+      <link
+         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400&display=swap"
+         rel="stylesheet"
+      />
+      <script
+         src="https://kit.fontawesome.com/39af08bb81.js"
+         crossorigin="anonymous"
+      ></script>
    </head>
+
+   <body>
+      <div id="container-login">
+         <h2>Login</h2>
+
+         <form>
+            <label for="email">Email</label>
+            <input
+               type="email"
+               id="email"
+               placeholder="Insira seu email"
+               autocomplete="off"
+            />
+
+            <label for="password">Senha</label>
+            <div class="pass-section">
+               <input
+                  type="password"
+                  id="password"
+                  placeholder="Insira sua senha"
+                  autocomplete="off"
+               />
+               <i class="far fa-eye icon-psw" id="pass-reveal-png"></i>
+            </div>
+
+            <div class="forgot-pass-section">
+               <a class="forgot-pass-link" href="./view/recuperar-senha.html">
+                  Esqueceu a senha?
+               </a>
+            </div>
+
+            <div class="section-btn-entrar">
+               <input type="submit" class="btn-entrar" value="Entrar" />
+            </div>
+         </form>
+
+         <section class="novo-cadastro" id="novo-cadastro">
+            <p class="novocad-description">Ainda não possui uma conta?</p>
+            <a class="novocad-btn" href="./view/cad_cliente.html">Cadastrar</a>
+         </section>
+      </div>
+      <script src="js/script.js"></script>
+   </body>
 </html>
