--- a/src/view/login.html
+++ b/src/view/login.html
@@ -7,7 +7,7 @@
 
       <title>Login</title>
 
-      <link rel="stylesheet" href="../css/cadastro.css" />
+      <link rel="stylesheet" href="../css/login.css" />
       <link rel="preconnect" href="https://fonts.gstatic.com" />
       <link
          href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400&display=swap"
