--- a/src/view/login.html
+++ b/src/view/login.html
@@ -44,7 +44,7 @@
             </div>
 
             <div class="forgot-pass-section">
-               <a class="forgot-pass-link" href="./view/recuperar-senha.html">
+               <a class="forgot-pass-link" href="recuperar-senha.html">
                   Esqueceu a senha?
                </a>
             </div>
