--- a/src/view/recuperar-senha.html
+++ b/src/view/recuperar-senha.html
@@ -17,7 +17,7 @@
          <div id="header-block">
             <h2>Recuperar senha</h2>
 
-            <a href="../index.html">Voltar para o Login</a>
+            <a href="login.html">Voltar para o Login</a>
          </div>
 
          <p>
