--- a/src/view/login.html
+++ b/src/view/login.html
@@ -56,7 +56,7 @@
 
          <section class="novo-cadastro" id="novo-cadastro">
             <p class="novocad-description">Ainda não possui uma conta?</p>
-            <a class="novocad-btn" href="./view/cad_cliente.html">Cadastrar</a>
+            <a class="novocad-btn" href="cad_cliente.html">Cadastrar</a>
          </section>
       </div>
       <script src="js/script.js"></script>
