--- a/src/view/login/index.html
+++ b/src/view/login/index.html
@@ -7,7 +7,7 @@
 
       <title>Login</title>
 
-      <link rel="stylesheet" href="../css/login.css" />
+      <link rel="stylesheet" href="css/login.css" />
       <link rel="preconnect" href="https://fonts.gstatic.com" />
       <link
          href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400&display=swap"
@@ -44,7 +44,7 @@
             </div>
 
             <div class="forgot-pass-section">
-               <a class="forgot-pass-link" href="recuperar-senha.html">
+               <a class="forgot-pass-link" href="../recuperar_senha">
                   Esqueceu a senha?
                </a>
             </div>
@@ -56,9 +56,10 @@
 
          <section class="novo-cadastro" id="novo-cadastro">
             <p class="novocad-description">Ainda não possui uma conta?</p>
-            <a class="novocad-btn" href="cad_cliente.html">Cadastrar</a>
+            <a class="novocad-btn" href="../cadastrar_cliente">Cadastrar</a>
          </section>
       </div>
-      <script src="js/script.js"></script>
+      <script src="js/login.js"></script>
+      <script src="js/password-reveal.js"></script>
    </body>
 </html>
