--- a/src/view/login/index.html
+++ b/src/view/login/index.html
@@ -44,7 +44,7 @@
             </div>
 
             <div class="forgot-pass-section">
-               <a class="forgot-pass-link" href="../recuperar_senha">
+               <a class="forgot-pass-link" href="../recuperar_senha/">
                   Esqueceu a senha?
                </a>
             </div>
@@ -56,7 +56,7 @@
 
          <section class="novo-cadastro" id="novo-cadastro">
             <p class="novocad-description">Ainda não possui uma conta?</p>
-            <a class="novocad-btn" href="../cadastrar_cliente">Cadastrar</a>
+            <a class="novocad-btn" href="../cadastrar_cliente/">Cadastrar</a>
          </section>
       </div>
       <script src="js/login.js"></script>
