--- a/src/view/recuperar_senha/recuperar-senha.html
+++ b/src/view/recuperar_senha/recuperar-senha.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Login</title>
-      <link rel="stylesheet" href="../css/recuperar-senha.css" />
+      <link rel="stylesheet" href="css/recuperar-senha.css" />
       <link rel="preconnect" href="https://fonts.gstatic.com" />
       <link
          href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400&display=swap"
@@ -17,7 +17,7 @@
          <div id="header-block">
             <h2>Recuperar senha</h2>
 
-            <a href="login.html">Voltar para o Login</a>
+            <a href="../login/">Voltar para o Login</a>
          </div>
 
          <p>
@@ -41,6 +41,6 @@
             </div>
          </form>
       </div>
-      <script src="../js/password-reveal.js"></script>
+      <script src="js/password-reveal.js"></script>
    </body>
 </html>
