Adição do javascript para login

--- a/src/view/login/css/login.css
+++ b/src/view/login/css/login.css
@@ -16,7 +16,7 @@
 ****************************/
 
 body {
-   background-image: url("img/livros.jpg");
+   background-image: url("../img/livros.jpg");
    background-size: cover;
 }
 
