--- a/src/view/login/index.html
+++ b/src/view/login/index.html
@@ -23,7 +23,7 @@
       <div id="container-login">
          <h2>Login</h2>
 
-         <form>
+         <form method="POST">
             <label for="email">Email</label>
             <input
                type="email"
@@ -50,7 +50,7 @@
             </div>
 
             <div class="section-btn-entrar">
-               <input type="submit" class="btn-entrar" value="Entrar" />
+               <input type="submit" id="btnLogin" class="btn-entrar" value="Entrar" />
             </div>
          </form>
 
@@ -60,5 +60,6 @@
          </section>
       </div>
       <script src="js/login.js"></script>
+      <script src="js/password-reveal.js"></script>
    </body>
 </html>
