--- a/src/view/recuperar_senha/index.html
+++ b/src/view/recuperar_senha/index.html
@@ -4,7 +4,9 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Login</title>
+      <title>Recuperar senha</title>
+
+      <link href="bootstrap.min.css" rel="stylesheet">
       <link rel="stylesheet" href="css/recuperar-senha.css" />
       <link rel="preconnect" href="https://fonts.gstatic.com" />
       <link
@@ -13,7 +15,7 @@
       />
    </head>
    <body>
-      <div id="container-login">
+      <div id="container-login" class="container-login">
          <div id="header-block">
             <h2>Recuperar senha</h2>
 
