--- a/src/view/login/index.html
+++ b/src/view/login/index.html
@@ -25,28 +25,16 @@
 
          <form method="POST">
             <label for="email">Email</label>
-            <input
-               type="email"
-               id="email"
-               placeholder="Insira seu email"
-               autocomplete="off"
-            />
+            <input type="email" id="email" placeholder="Insira seu email"  />
 
             <label for="password">Senha</label>
             <div class="pass-section">
-               <input
-                  type="password"
-                  id="password"
-                  placeholder="Insira sua senha"
-                  autocomplete="off"
-               />
+               <input type="password" id="password" placeholder="Insira sua senha"  />
                <i class="far fa-eye icon-psw" id="pass-reveal-png"></i>
             </div>
 
             <div class="forgot-pass-section">
-               <a class="forgot-pass-link" href="../recuperar_senha/">
-                  Esqueceu a senha?
-               </a>
+               <a class="forgot-pass-link" href="../recuperar_senha/">Esqueceu a senha?</a>
             </div>
 
             <div class="section-btn-entrar">
