--- a/src/view/login/css/login.css
+++ b/src/view/login/css/login.css
@@ -29,7 +29,7 @@ input:focus {
       Container login
 
 ****************************/
-.container-login {
+#container-login {
    padding: 30px 40px;
    margin: 0 auto;
    margin-top: 10vh;
