--- a/src/view/login/index.html
+++ b/src/view/login/index.html
@@ -21,7 +21,7 @@
    </head>
 
    <body>
-      <div id="container-login" class="container-login">
+      <div id="container-login" class="login">
          <h2>Login</h2>
 
          <form method="POST">
