--- a/src/view/login/index.html
+++ b/src/view/login/index.html
@@ -21,6 +21,10 @@
    </head>
 
    <body>
+      <div class="container">
+      <div class="logoSuperior">
+			<img src="Livrados.png" style="width: 120px">
+		 </div>
       <div id="container-login" class="login">
          <h2>Login</h2>
 
@@ -48,6 +52,7 @@
             <p class="novocad-description">Ainda não possui uma conta?<a class="novocad-btn" href="../cadastrar_cliente/">Cadastrar-se</a></p>
          </section>
       </div>
+   </div>
       <script src="js/login.js"></script>
       <script src="js/password-reveal.js"></script>
    </body>
