--- a/src/view/login/index.html
+++ b/src/view/login/index.html
@@ -21,10 +21,13 @@
    </head>
 
    <body>
-      <div class="container">
-      <div class="logoSuperior">
-			<img src="Livrados.png" style="width: 120px">
-		 </div>
+      <div class="container-logo">
+         <div class="logoSuperior">
+			   <img src="Livrados.png" style="width: 120px">
+	      </div>
+      </div>
+
+
       <div id="container-login" class="login">
          <h2>Login</h2>
 
@@ -48,7 +51,7 @@
          </form>
 
          <section class="novo-cadastro" id="novo-cadastro">
-            <p class="novocad-description">Ainda não possui uma conta?<a class="novocad-btn" href="../cadastrar_cliente/">Cadastrar-se</a></p>
+            <p class="novocad-description">Ainda não possui uma conta?<a class="novocad-btn" href="../cadastrar_cliente/">Cadastre-se</a></p>
          </section>
       </div>
    </div>
