--- a/src/view/login/css/login.css
+++ b/src/view/login/css/login.css
@@ -24,10 +24,21 @@ input:focus {
    outline: none;
 }
 
+.background-upon{
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 50vh;
+   background-color: #f8a72dCC;
+   border-bottom: 1px solid #32323211;
+}
+
 .logoSuperior{
    position: absolute;
-   top: 0px;
-   left: 0px;
+   bottom: 0vh;
+   right: 0vh;
+   background-color: #000;
  }
 
  .container-logo{
@@ -52,7 +63,7 @@ input:focus {
    border-radius: 15px;
    background-color: #FFF;
    text-align: center;
-   border: 1px solid #F2F2F2;
+   border: 1px solid #A4A4A455;
    box-sizing: border-box;
    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.15);
    transition: 0.3s;
@@ -105,6 +116,7 @@ input:focus {
 
 ::-webkit-input-placeholder {
    font-style: italic;
+   font-size: 0.8rem;
 }
 
 .section-btn-entrar {
@@ -185,7 +197,7 @@ NOVO CADASTRO
 **********************/
 
 .novo-cadastro {
-   margin-top: 35px;
+   margin-top: 25px;
 }
 
 .novocad-description {
@@ -194,12 +206,11 @@ NOVO CADASTRO
 }
 
 .novocad-btn {
-   margin-top: 10px;
-   display: block;
    font-size: 0.9rem;
    color: #f8a72d;
    font-weight: 900;
    transition: color 0.3s;
+   text-transform: uppercase;
 }
 
 .novocad-btn:hover {
