--- a/src/view/login/index.html
+++ b/src/view/login/index.html
@@ -7,7 +7,7 @@
 
       <title>Login</title>
 
-      <link href="bootstrap.min.css" rel="stylesheet">
+      <link href="./css/bootstrap.min.css" rel="stylesheet">
       <link rel="stylesheet" href="css/login.css"/>
       <link rel="preconnect" href="https://fonts.gstatic.com" />
       <link
@@ -21,40 +21,44 @@
    </head>
 
    <body>
+
       <div class="container-logo">
          <div class="logoSuperior">
-			   <img src="Livrados.png" style="width: 120px">
-	      </div>
+            <img src="./img/LivradosLogo.png" style="width: 240px">
+         </div>
       </div>
 
+      <div class="background-upon">
 
-      <div id="container-login" class="login">
-         <h2>Login</h2>
+         <div id="container-login" class="login">
+            <h2>Login</h2>
 
-         <form method="POST">
-            <label for="email">Email</label>
-            <input type="email" id="email" placeholder="Insira seu email"  />
+            <form method="POST">
+               <label for="email">Email</label>
+               <input type="email" id="email" placeholder="Insira seu email"  />
 
-            <label for="password">Senha</label>
-            <div class="pass-section">
-               <input type="password" id="password" placeholder="Insira sua senha"  />
-               <i class="far fa-eye icon-psw" id="pass-reveal-png"></i>
-            </div>
+               <label for="password">Senha</label>
+               <div class="pass-section">
+                  <input type="password" id="password" placeholder="Insira sua senha"  />
+                  <i class="far fa-eye icon-psw" id="pass-reveal-png"></i>
+               </div>
 
-            <div class="forgot-pass-section">
-               <a class="forgot-pass-link" href="../recuperar_senha/">Esqueceu a senha?</a>
-            </div>
+               <div class="forgot-pass-section">
+                  <a class="forgot-pass-link" href="../recuperar_senha/">Esqueceu a senha?</a>
+               </div>
 
-            <div class="section-btn-entrar">
-               <input type="submit" id="btnLogin" class="btn-entrar" value="Entrar"/>
-            </div>
-         </form>
+               <div class="section-btn-entrar">
+                  <input type="submit" id="btnLogin" class="btn-entrar" value="Entrar"/>
+               </div>
+            </form>
 
-         <section class="novo-cadastro" id="novo-cadastro">
-            <p class="novocad-description">Ainda não possui uma conta?<a class="novocad-btn" href="../cadastrar_cliente/">Cadastre-se</a></p>
-         </section>
+            <section class="novo-cadastro" id="novo-cadastro">
+               <p class="novocad-description">Ainda não possui uma conta?</p>
+                  <a class="novocad-btn" href="../cadastrar_cliente/">Cadastre-se</a>
+            </section>
+         </div>
       </div>
-   </div>
+      
       <script src="js/login.js"></script>
       <script src="js/password-reveal.js"></script>
    </body>
