--- a/src/view/cadastrar_cliente/css/cliente.css
+++ b/src/view/cadastrar_cliente/css/cliente.css
@@ -1,68 +1,73 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
+  box-sizing: border-box;
+  border: none;
+  font-family: "Raleway", "Helvetica";
+  color: #323232;
 }
 
 body {
-  background-image: url(https://i.imgur.com/XbRg9D7.png);
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed
-  
+  background-attachment: fixed;  
 }
 
 .container {
   display: flex;
   justify-content: center;
   width: 100%;
-  margin-top: 100px;
+  margin-top: auto;
 }
 
 .card {
-  background-color: #ffffff80;
-  padding: 30px;
-  border-radius: 4%;
-  box-shadow: 3px 3px 1px 0px #00000060;
-  width: 400px;
+  width: 600px;
+  height: auto;
+  padding: 30px 40px;
+  margin: 0 auto;
+  margin-top: 10vh;
+  margin-bottom: 10vh;
+  border-radius: 10px;
+  background-color: #fff;
+  text-align: center;
+  border: 1px solid #F2F2F2;
+  box-sizing: border-box;
+  box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.15);
+  transition: 0.3s;
 }
 
-h1{
-  text-align: center;
-  margin-bottom: 20px;
-  color: #0d009c
+.card:hover{
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 .label-float input{
   width: 100%;
-  padding: 5px 5px;
+  padding: 3px 3px;
   display: inline-block;
   border: 0;
-  border-bottom: 2px solid #0d009c;
   background-color: transparent;
   outline: none;
   min-width: 180px;
-  font-size: 16px;
+  font-size: 14px;
   transition: all .3s ease-out;
   border-radius: 0;
-  
+  border-bottom: 2px solid #f8a72d;
 }
 
 .label-float{
   position: relative;
-  padding-top: 13px;
-  margin-top: 5%;
-  margin-bottom: 5%;
+  padding-top: 8px;
+  margin-top: 1%;
+  margin-bottom: 1%;
 }
 
 .label-float input:focus{
-  border-bottom: 2px solid #4038a0;
+  border-bottom: 2px solid #f8a72d;
 }
 
 .label-float label{
-  color: #0d009c;
+  color: black;
   pointer-event: none;
   position: absolute;
   top: 0;
@@ -73,28 +78,26 @@ h1{
 
 .label-float input:focus + label,
 .label-float input:valid + label{
-  font-size: 13px;
+  font-size: 12px;
   margin-top: 0;
-  color: #4038a0
+  color: black;
 }
 
 button{
-  background-color: transparent;
-  border-color: #0d009c;
-  color: #0d009c;
-  padding: 7px;
-  font-weight: bold;
-  font-size: 12pt;
-  margin-top: 20px;
-  border-radius: 4px;
+  width: 95%;
+  height: 40px;
+  background-color: #f8a72d;
+  margin-top: 40px;
+  border: none;
+  border-radius: 10px;
   cursor: pointer;
-  outline: none;
-  transition: all .4s ease-out;
+  font-weight: 1000;
+  text-transform: uppercase;
+  transition: background-color 0.3s;
 }
 
 button:hover{
-  background-color: #0d009c;
-  color: #fff;
+  background-color: #f8a72dbb;
 }
 
 .justify-center{
@@ -107,7 +110,7 @@ button:hover{
   top: 15px;
   right: 10px;
   cursor: pointer;
-  color: #0d009c;
+  color: #000000;
 }
 
 #msgError{
@@ -144,4 +147,10 @@ button:hover{
   padding: 10px;
   border-radius: 4px;
   display: none;
+}
+
+.logoSuperior{
+  position: absolute;
+  top: 0px;
+  left: 0px;
 }
