--- a/src/view/cadastrar_cliente/index.html
+++ b/src/view/cadastrar_cliente/index.html
@@ -8,7 +8,7 @@
     <meta name="generator" />
     <title>Crie sua conta</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">  
-	<link href="bootstrap.min.css" rel="stylesheet">
+	<link href="./css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"/>
     <link
         rel="stylesheet"
@@ -20,7 +20,7 @@
 <body>
 	<div class='container'>
 		<div class="logoSuperior">
-			<img src="Livrados.png" style="width: 120px">
+			<img src="./img/Livrados.png" style="width: 120px">
 		 </div>
 	  	<div class='card'>
 		<h2>Crie sua conta</h2>
@@ -121,3 +121,4 @@
 
 	
    </body>
+</html>
