LOGIN COMPLETO COM AJUDA DO MAYKÃO

--- a/src/view/login/index.html
+++ b/src/view/login/index.html
@@ -33,7 +33,7 @@
          <div id="container-login" class="login">
             <h2>Login</h2>
 
-            <form method="POST">
+            <form>
                <label for="email">Email</label>
                <input type="email" id="email" placeholder="Insira seu email"  />
 
