--- a/src/view/incluir_livro.html
+++ b/src/view/incluir_livro.html
@@ -14,6 +14,7 @@
       />
       <link href="../css/bootstrap.min.css" rel="stylesheet" />
       <link href="../css/style.css" rel="stylesheet" />
+      <script src="./js/isLoged.js"></script>
    </head>
 
    <body>
