--- a/src/view/meus_livros.html
+++ b/src/view/meus_livros.html
@@ -10,6 +10,7 @@
 
       <link href="../css/bootstrap.min.css" rel="stylesheet" />
       <link href="../css/style.css" rel="stylesheet" />
+      <script src="./js/isLoged.js"></script>
       
    </head>
 
